changed some integer/long->Long conversions to appease the compiler Gods